--- a/app/src/main/res/layout/favorite_items.xml
+++ b/app/src/main/res/layout/favorite_items.xml
@@ -32,7 +32,7 @@
         <TextView
             android:id="@+id/favMealCountry"
             android:layout_width="wrap_content"
-            android:layout_height="19dp"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/arimo_bold_italic"
             android:text="TextView"
             android:textColor="@color/darkYellow"
