--- a/app/src/main/res/layout/fragment_meal_details.xml
+++ b/app/src/main/res/layout/fragment_meal_details.xml
@@ -78,6 +78,15 @@
                     app:layout_constraintStart_toStartOf="@+id/guideline12"
                     app:layout_constraintTop_toTopOf="@+id/guideline13" />
 
+                <Button    android:id="@+id/calenderbtn"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="50dp"
+                    android:background="@drawable/calendar"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/guideline13" />
+
                 <TextView
                     android:id="@+id/myName"
                     android:layout_width="wrap_content"
