--- a/app/src/main/res/layout/check_internet_dialog.xml
+++ b/app/src/main/res/layout/check_internet_dialog.xml
@@ -24,9 +24,10 @@
         android:id="@+id/btnRetry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Retry"
+        android:layout_marginTop="123dp"
         android:background="@drawable/custom_button"
+        android:text="Cancel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="368dp" />
+        app:layout_constraintTop_toBottomOf="@+id/checkNetwork_Txt" />
 </androidx.constraintlayout.widget.ConstraintLayout>
