--- a/app/src/main/res/layout/check_internet_dialog.xml
+++ b/app/src/main/res/layout/check_internet_dialog.xml
@@ -22,10 +22,13 @@
 
     <Button
         android:id="@+id/btnRetry"
-        android:layout_width="89dp"
-        android:layout_height="40dp"
+        android:layout_width="93dp"
+        android:layout_height="34dp"
         android:background="@drawable/custom_button"
+        android:fontFamily="@font/boogaloo"
         android:text="Cancel"
+        android:textColor="@color/darkGreen"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
