--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -119,6 +119,14 @@
                 android:layout_below="@id/textView5"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="16dp"
+                android:clickable="true"
+                android:contextClickable="true"
+                android:elevation="6dp"
+                android:focusable="auto"
+                android:outlineProvider="none"
+                android:pointerIcon="zoom_in"
+                app:buttonSize="standard"
+                app:colorScheme="dark"
                 app:layout_constraintEnd_toStartOf="@+id/guideline4"
                 app:layout_constraintStart_toStartOf="@+id/guideline5"
                 app:layout_constraintTop_toBottomOf="@+id/textView5" />
@@ -158,6 +166,7 @@
                 android:background="@drawable/custom_button"
                 android:fontFamily="@font/boogaloo"
                 android:text="@string/login"
+                android:textColor="@color/darkGreen"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline4"
