--- a/app/src/main/res/layout/fragment_search_by_ingridient.xml
+++ b/app/src/main/res/layout/fragment_search_by_ingridient.xml
@@ -39,11 +39,12 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/categoryRecyclerView"
-                android:layout_width="352dp"
-                android:layout_height="561dp"
+                android:layout_width="370dp"
+                android:layout_height="598dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/searchView" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
@@ -59,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="715dp" />
+        app:layout_constraintGuide_begin="740dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline8"
@@ -108,7 +109,7 @@
         android:fontFamily="@font/boogaloo"
         android:text="@string/favoriteIngredient"
         android:textColor="@color/darkYellow"
-        android:textSize="20sp"
+        android:textSize="26dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toStartOf="@+id/guideline9"
         app:layout_constraintStart_toStartOf="@+id/guideline8"
