--- a/app/src/main/res/layout/fragment_week_plan.xml
+++ b/app/src/main/res/layout/fragment_week_plan.xml
@@ -72,7 +72,7 @@
                 android:layout_height="match_parent">
 
                 <TextView
-                    android:id="@+id/textView19"
+                    android:id="@+id/satTxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -80,19 +80,19 @@
                     android:fontFamily="@font/boogaloo"
                     android:text="@string/sat_txt"
                     android:textColor="@color/darkYellow"
-                    android:textSize="16sp"
+                    android:textSize="24sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerViewsat"
                     android:layout_width="0dp"
-                    android:layout_height="500dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="15dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView19">
+                    app:layout_constraintTop_toBottomOf="@+id/satTxt">
 
                 </androidx.recyclerview.widget.RecyclerView>
 
@@ -116,6 +116,7 @@
                     android:fontFamily="@font/boogaloo"
                     android:text="@string/sun_txt"
                     android:textColor="@color/darkYellow"
+                    android:textSize="24sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/viewSat" />
 
@@ -151,7 +152,7 @@
                     android:text="@string/mon_txt"
 
                     android:textColor="@color/darkYellow"
-                    android:textSize="16sp"
+                    android:textSize="24sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/viewSun" />
 
@@ -188,7 +189,7 @@
                     android:text="@string/tus_txt"
 
                     android:textColor="@color/darkYellow"
-                    android:textSize="16sp"
+                    android:textSize="24sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/viewMon" />
 
@@ -215,7 +216,7 @@
                 /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
                 <TextView
-                    android:id="@+id/WedTxt"
+                    android:id="@+id/wedTxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -224,7 +225,7 @@
                     android:text="@string/wed_txt"
 
                     android:textColor="@color/darkYellow"
-                    android:textSize="16sp"
+                    android:textSize="24sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/viewTus" />
 
@@ -238,7 +239,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/WedTxt"
+                    app:layout_constraintTop_toBottomOf="@+id/wedTxt"
                     tools:ignore="MissingConstraints" />
 
                 <View
@@ -262,7 +263,7 @@
                     android:text="@string/Thu_txt"
 
                     android:textColor="@color/darkYellow"
-                    android:textSize="16sp"
+                    android:textSize="24sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/viewWed" />
 
@@ -299,7 +300,7 @@
 
                     android:text="@string/Fri_txt"
                     android:textColor="@color/darkYellow"
-                    android:textSize="16sp"
+                    android:textSize="24sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/viewThurs" />
 
@@ -309,6 +310,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="15dp"
+                    android:layout_marginBottom="16dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/FriTxt"
