--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -49,7 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="24dp"
                 android:fontFamily="@font/arimo_bold_italic"
                 android:text="@string/you_might_like_txt"
                 android:textColor="@color/darkYellow"
@@ -60,11 +60,12 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/mealsRecycler"
-                android:layout_width="324dp"
-                android:layout_height="295dp"
-                android:layout_marginTop="16dp"
+                android:layout_width="327dp"
+                android:layout_height="264dp"
+                android:layout_marginTop="32dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.615"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView9"
                 app:layout_constraintVertical_bias="0.0" />
