--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -212,5 +212,9 @@
         android:id="@+id/weekPlan"
         android:name="com.example.foodplanner.weekPlan.view.WeekPlan"
         android:label="fragment_week_plan"
-        tools:layout="@layout/fragment_week_plan" />
+        tools:layout="@layout/fragment_week_plan" >
+        <action
+            android:id="@+id/action_weekPlan_to_mealDetailsFragment"
+            app:destination="@id/mealDetailsFragment" />
+    </fragment>
 </navigation>
